# video-captioning

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
agent/: local_llm.py  main.py  prompts.py  video.py  vlm.py
distillation-priority-1/: 01_generate_descriptions.py  02_teacher_label.py  03_build_dataset.py  04_train_lora.py  05_judge_evals.py  common.py
distillation-priority-1/data/: descriptions.jsonl  labeled.jsonl  train.jsonl  val.jsonl
distillation-priority-1/eval_results/: eval_real.jsonl
quantization-priority-3/: generate_evals.py  merge_adapter.py
scripts/: run_local.sh
