[project]
name = "amd-track2-agent"
version = "0.1.0"
description = "AMD Developer Hackathon Track 2: video captioning agent"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.60",
    "requests>=2.32",
]

[dependency-groups]
train = [
    "accelerate>=1.14.0",
    "datasets>=5.0.0",
    "peft>=0.19.1",
    "torch>=2.13.0",
    "transformers>=5.13.0",
    "trl>=1.7.1"
]
